overflow-x issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,21 @@ html, body {
     width: 100%;
     height: auto;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
+
 body {
     margin: 0;
     background-size: 100% 100%;
     background-color: #FFFFFF;
 }
+
 nav {
     background-color: #D9D9D9;
     color: #3C6E71;
     padding: 20px 10px;
 }
+
 .logo {
     display: flex;
     width: 20%;
@@ -20,10 +24,12 @@ nav {
     border-radius: 50%;
     padding-right: 10px;
 }
+
 .logo p {
     font-family: 'Permanent Marker';
     color: #3C6E71;
 }
+
 .home-links {
     font-family: Lora;
     font-size: 20px;
@@ -31,6 +37,7 @@ nav {
     justify-content: flex-start;
     align-items: center;
 }
+
 .navigation {
     padding: 0 10px;
 }
@@ -72,10 +79,12 @@ footer {
     width: 100%;
     height: 50%;
 }
+
 .social-icons { 
     font-size: 30px;
     color: #D9D9D9;
 }
+
 @media only screen and (max-width: 600px) {
     body {
         width: 100%;
@@ -83,6 +92,7 @@ footer {
     }
     /* add hamburger */
 }
+
 @media only screen and (min-width: 769px) {
     body {
         width: 100%;
